templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: elk
   labels:
      name: hello-helm
