templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-helm
  name: hello-svce
  namespace: elk
spec:
  ports:
    # The port that this service should serve on.
    - port: 80
      targetPort: 8080
  # Label keys and values that must match in order to receive traffic for this service.
  selector:
    app: hello-helm 
  type: LoadBalancer
